# Workflow-CI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
MLProject/: DOCKERHUB_LINK.txt  Dockerfile  MLProject  conda.yaml  modelling.py
MLProject/src/: metrics.py  preprocessing.py
