[project]
name = "workflow-ci"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dagshub>=0.7.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "mlflow==2.19.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
